--- a/configuration.properties
+++ b/configuration.properties
@@ -12,3 +12,7 @@ HMCWrongUserName=manager2
 HMCWrongPassword=manager2/
 
 EditorUrl=https://editor.datatables.net/
+
+HerokuAppAddElementUrl=https://the-internet.herokuapp.com/add_remove_elements/
+
+WebUniverstyUrl=http://webdriveruniversity.com/
