--- a/configuration.properties
+++ b/configuration.properties
@@ -16,3 +16,11 @@ EditorUrl=https://editor.datatables.net/
 HerokuAppAddElementUrl=https://the-internet.herokuapp.com/add_remove_elements/
 
 WebUniverstyUrl=http://webdriveruniversity.com/
+
+DemoGuruUrl=http://demo.guru99.com/test/web-table-element.php
+
+AutomationPractiseUrl=http://automationpractice.com/index.php
+AutoPracWrongEmail=emrah.gmail.com
+AutPracHataYazisi=Invalid email address.
+
+DemoQaUrl=https://demoqa.com/dynamic-properties 
